# cterm

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: cterm.conf.example
docs/: ARCHITECTURE.md
include/: addressbook.h  config.h  gui.h  html_parser.h  imap.h  network.h  smtp.h  ui.h
src/: addressbook.c  config.c  gui.c  html_parser.c  imap.c  main.c  main_gui.c  network.c  smtp.c  ui.c
